index.html: Add title and description to webpage styles.css: Add styling to h1 and p tags script.js: Fix spacing errors

--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,14 @@ html {
 }
 
 body {
+    font-family: 'Courier New', Courier, monospace;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
     min-height: 100%;
-    background-color: brown;
+    background-color: darkcyan;
 }
 
 #container {
